--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,7 +1,14 @@
 .app {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   background-color: #131316;
   color: #f2f2f3;
+  padding-bottom: 40px;
+}
+
+.mainPage{
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  column-gap: 56px;
 }
