--- a/src/components/feed-order/feed-order.module.css
+++ b/src/components/feed-order/feed-order.module.css
@@ -1,11 +1,18 @@
 .container {
-  min-width: 584px;
+  display: grid;
+  row-gap: 24px;
+  flex-direction: column;
+  /*display: flex;
+  */
+  max-width: 100%;
 }
 
 .order {
+  background-color: #1C1C21;
+  padding-left: 20px;
+  padding-right: 20px;
   padding-top: 24px;
   padding-bottom: 24px;
-  display: flex;
   flex-direction: column;
   row-gap: 24px;
   border-radius: 40px;
@@ -85,7 +92,8 @@
 }
 
 .numberAndDate {
-  min-width: 436px;
+  /*/min-width: 436px;*/
+  min-width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -96,13 +104,15 @@
 }
 
 .heading {
-  max-width: 436px;
+  /*min-width: 436px;*/
+  max-width: 100%;
   color: #F2F2F3;
 }
 
 .details {
   display: flex;
-  min-width: 436px;
+  /*min-width: 436px;*/
+  min-width: 100%;
   flex-direction: row;
   justify-content: space-between;
 }
