--- a/src/components/feed-status/feed-status.module.css
+++ b/src/components/feed-status/feed-status.module.css
@@ -5,76 +5,32 @@
 .status {
   display: flex;
   flex-direction: row;
+  column-gap: 36px;
 }
 
 .numberAndDate {
   display: grid;
   column-gap: 36px;
+  padding-bottom: 60px;
 }
 
 .list {
   list-style-type: none;
   min-width: 272px;
-  display: flex;
+  display: grid;
   flex-direction: column;
-  align-items: flex-start;
+  grid-auto-flow: column;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 8px;
+  flex-wrap: wrap;
+  text-align: start;
+  padding: 0;
 }
 
 .numberReady {
   color: #00CCCC;
 }
 
-/*.list {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  list-style-type: none;
-  margin-top: 100px;
-  max-width: 584px;
-  height: 532px;
+.total {
+  padding-bottom: 60px;
 }
-
-.main {
-  display: flex;
-  flex-direction: column;
-  row-gap: 16px;
-  padding: 0;
-  overflow-y: scroll;
-  scroll-behavior: smooth;
-}
-
-.mainSauce {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  column-gap: 14px;
-}
-  
-.order {
-  display: flex;
-  margin-top: 40px;
-  flex-direction: row;
-  justify-content: flex-end;
-  column-gap: 40px;
-}
-
-.cost {
-  display: flex;
-  align-items: center;
-  column-gap: 10px;
-}
-
-.bun {
-  display: flex;
-}
-
-
-.main::-webkit-scrollbar {
-  width: 8px;
-  background: #2F2F37;
-}
-
-.main::-webkit-scrollbar-thumb {
-  width: 8px;
-  background: #8585AD;
-}*/
