--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -8,7 +8,8 @@
   transform: translate(-50%, -50%);
   border-radius: 40px;
   background-color: #1c1c21;
-  transition: visibility 0.5s, opacity 0.5s
+  transition: visibility 0.5s, opacity 0.5s;
+  z-index: 10;
 }
 
 .component {
